# aether

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TESTING.md  TODO.md  config.example.toml
.agents/skills/rust-mcp-server-generator/: SKILL.md
.claude/: settings.local.json
.github/workflows/: test.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: cargo-build-error-fix.md
.sisyphus/evidence/: task-11-data-doctests-pass.txt  task-13-comprehensive-doctests-pass.txt  task-14-html-render-success.txt  task-15-full-test-suite-pass.txt  task-8-handler-doctests-pass.txt
.sisyphus/notepads/: learnings.md
.sisyphus/notepads/documentation-improvement/: learnings.md
.sisyphus/notepads/test-improvement/: issues.md  learnings.md
.sisyphus/plans/: documentation-improvement.md  test-improvement.md
.sisyphus/templates/: command-handler-template.md  method-documentation-template.md  struct-documentation-template.md
migrations/: 20260306000000_muyu.sql
plans/: Plan.md  config-toml.md  mcp-servers.md  mcp.md
scripts/: coverage.sh
src/: ai_service.rs  bot.rs  config.rs  conversation.rs  event_handler.rs  lib.rs  main.rs  media.rs  traits.rs
src/command/: context.rs  gateway.rs  mod.rs  parser.rs  permission.rs  registry.rs
src/event_handler/: extract.rs  invite.rs  mod.rs  streaming.rs
src/mcp/: config.rs  mod.rs  server_manager.rs  tool_registry.rs
src/mcp/builtin/: mod.rs  web_fetch.rs
src/mcp/transport/: http.rs  mod.rs  stdio.rs
src/modules/: mod.rs
src/modules/admin/: handlers.rs
src/modules/mcp/: handlers.rs  mod.rs
src/modules/meme/: handlers.rs  mod.rs  tenor.rs
src/modules/muyu/: handlers.rs  logic.rs  mod.rs  models.rs  store.rs
src/modules/persona/: handlers.rs
src/store/: database.rs  persona_store.rs
src/ui/: mod.rs  templates.rs
tests/: admin_commands.rs  ai_service_integration.rs  bot_integration.rs  database_integration.rs  event_handler_integration.rs  invite_integration.rs  mcp_commands.rs  mcp_integration.rs  muyu_commands.rs  persona_commands.rs  streaming_integration.rs  vision_integration.rs
tests/common/: mock_client.rs  mock_room.rs  mod.rs  test_helpers.rs  test_utils.rs
tests/mcp/: builtin_tools_tests.rs  config_tests.rs  retry_mechanism_tests.rs  server_manager_tests.rs  tool_registry_tests.rs
