[package]
name = "aether-matrix"
version = "0.1.1"
edition = "2024"

[dependencies]
matrix-sdk = "0.16.0"
async-openai = { version = "0.33", features = ["chat-completion"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
futures-util = "0.3"
base64 = "0.22"
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
] }
mime = "0.3"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
rand = "0.9"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.13"
tempfile = "3"
lazy_static = "1"
tokio-stream = "0.1"
futures = "0.3"
matrix-sdk-test = "0.16.0"
serial_test = "3"

[profile.release]
opt-level = 3 # 最高优化级别
# lto = "fat"       # 链接时优化，跨 crate 全局优化
lto = true              # 链接时优化，跨 crate 全局优化
codegen-units = 1       # 单个代码生成单元，允许更好的优化
panic = "abort"         # abort 而非 unwind，减小二进制并提升性能
strip = true            # 剥离符号信息，减小二进制大小
overflow-checks = false # 禁用运行时溢出检查
